# entropy-RLAF

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
entropy_rlaf/: __init__.py
entropy_rlaf/core/: __init__.py  base.py  interfaces.py  models.py
entropy_rlaf/engine/: __init__.py  prm.py  prm_engine.py
entropy_rlaf/orchestrator/: __init__.py  search.py
entropy_rlaf/plugins/: __init__.py  ast_security.py  sqlite_transactional.py
entropy_rlaf/refinery/: __init__.py  dataset.py  dpo_refinery.py
entropy_rlaf/telemetry/: divergence.py
entropy_rlaf/verification_mesh/: __init__.py  mesh.py
tests/: test_ast_security.py  test_engine.py  test_plugins.py  test_search.py
